# recad_core

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust-clippy.yml  rust.yml
examples/: femtovg_plt.rs  raqote_plt.rs  svg_plt.rs  tiny_skia_plt.rs
src/: circuit.rs  draw.rs  footprint.rs  gr.rs  lib.rs  netlist.rs  parser.rs  pcb.rs  schema.rs  schema_ploter.rs  schema_reader.rs  schema_writer.rs  symbols.rs  symbols_writer.rs
src/math/: bbox.rs  fonts.rs  mod.rs  transform.rs
src/plot/: femtovg.rs  mod.rs  raqote_plotter.rs  svg.rs  text.rs  tiny_skia_plotter.rs
src/plot/theme/: mod.rs
src/sexp/: builder.rs  constants.rs  mod.rs  parser.rs  writer.rs
tests/: builder.rs  rewrite.rs  test.rs
tests/echo/: echo.kicad_prl  echo.kicad_pro  echo.kicad_sch
tests/empty/: empty.kicad_prl  empty.kicad_pro  empty.kicad_sch
