[package]
name = "recad_core"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "racad"
#
# [[bin]]
# name = "recad"

[dependencies]
ndarray = "*"
svg  = "0.17"
itertools = "0.13"
lazy_static = "1.4"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
indexmap = "2.2.6"
regex = "1"
fontdue = "0.9"
rust-fontconfig = "0.1.6"
font-kit = "0.13"

glutin = "0.30.3"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
winit = { version = "0.28.1", default-features = true }
femtovg = "0.9"
image = "0.25"

tiny-skia = "0.11"

log = { version = "0.4", features = ["release_max_level_error"] }
env_logger = "0.11"
colored = "2"
raqote = "0.8.4"

[dev-dependencies]
similar = "2.5"

[[examples]]
name = "nanovg_plt"
path = "examples/nanovg_plt.rs"

[[examples]]
name = "raqote_plt"
path = "examples/raqote_plt.rs"

[[examples]]
name = "tiny_skia_plt"
path = "examples/tiny_skia_plt.rs"

[[examples]]
name = "svg_plt"
path = "examples/svg_plt.rs"
